--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
           </div>
           
         </div>
+
+        
       </div>
+      <a href="callofduty.html" class="drugaya">ПЕРЕХОД НА 2 СТРАНИЦУ</a>
     </div>
   </body>
 </html>
